# CI-CD

./: README.md
.github/workflows/: pipeline.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/tests/: test_main.py
deploy/: docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: backend.yaml  frontend.yaml  ingress.yaml
frontend/: .eslintrc.cjs  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/tests/: App.test.jsx  setup.js
