[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=xml --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
# Check for common security issues
skips = ["B101"] # Skip B101 (assert) as it is used in tests (redundant with pytest)
